# technical-challenge

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
api-schema/: techinical-challenge.postman_collection.json
src/application/shared/: nullary_usecase.py  unit_usecase.py  usecase.py
src/database/: storage.db
src/domain/exceptions/: __init__.py  handle_exceptions.py
src/domain/exceptions/types/: http_bad_request.py  http_not_found.py  integrity_exception.py  server_error.py  validation_exception.py
src/domain/notification/: __init__.py  notification.py
src/domain/pagination/: pagination.py  search_query.py
src/domain/user/: abs_user_gateway.py  user.py
src/domain/validators/: user_validator.py
src/infra/: server.py
src/infra/adapters/api/: request_adapter.py
src/infra/api/composers/: base_composer.py
src/infra/api/controller/: abs_controller.py
src/infra/api/routes/: base_routes.py
src/infra/config/: __init__.py  settings.py
src/infra/db/: __init__.py
src/infra/db/repositories/: users_repository.py
src/infra/db/settings/: __init__.py  connection.py
src/infra/persistence/: __init__.py
src/infra/persistence/entities/: __init__.py  users.py
src/infra/persistence/repositories/: __init__.py  users_repository.py
test/domain/user/: user_test.py
test/infra/api/composer/: user_composer_test.py
test/infra/api/controller/: user_controller_test.py
test/infra/api/routes/: usr_routes_test.py
test/infra/db/repositories/: user_repository_test.py
(+28 files in other folders)
